add option to set postponed flag and change datetime for admin

--- a/tipovacka-app/src/assets/i18n/cs.json
+++ b/tipovacka-app/src/assets/i18n/cs.json
@@ -59,5 +59,6 @@
       "SUCCESSFUL_TIPS": "Úspěšné tipy",
       "SUCCESSFUL_RATE": "Úspěšnost"
     }
-  }
+  },
+  "POSTPONED": "Zápas odložen."
 }
