--- a/tipovacka-app/src/assets/i18n/en.json
+++ b/tipovacka-app/src/assets/i18n/en.json
@@ -59,5 +59,6 @@
       "SUCCESSFUL_TIPS": "Successful tips",
       "SUCCESSFUL_RATE": "Successful rate"
     }
-  }
+  },
+  "POSTPONED": "Match postponed."
 }
