--- a/tipovacka-app/src/assets/i18n/en.json
+++ b/tipovacka-app/src/assets/i18n/en.json
@@ -60,5 +60,6 @@
       "SUCCESSFUL_RATE": "Successful rate"
     }
   },
-  "POSTPONED": "Match postponed."
+  "POSTPONED": "Match postponed.",
+  "CREATE_USER_LEAGUE": "Create user league"
 }
