choose user league and show chosen

--- a/tipovacka-app/src/assets/i18n/cs.json
+++ b/tipovacka-app/src/assets/i18n/cs.json
@@ -70,5 +70,10 @@
     "STARTED_DATE": "Datum začátku",
     "STARTED_DATE_INFO": "Datum od kdy se začínají počítat body. Nezadané datum se rovná všechny body.",
     "CHOSEN_LEAGUES": "Vybrané ligy"
+  },
+  "CHOOSE_USER_LEAGUE_BUTTON": "Zobrazit ligu přátel ({{count}})",
+  "CHOOSE_USER_LEAGUE": {
+    "TITLE": "Zobrazit ligu přátel",
+    "CANCEL_BUTTON": "Zavřít"
   }
 }
