--- a/tipovacka-app/src/assets/i18n/cs.json
+++ b/tipovacka-app/src/assets/i18n/cs.json
@@ -109,6 +109,7 @@
   "INFO": {
     "TITLE": "Informace a pravidla",
     "MATCH_TIP_DEADLINE": "Tip na konečný výsledek lze zadat kdykoliv před oficiálním startem zápasu.",
-    "MATCH_RESULT_WRITE": "Výsledky se snažíme zapsat co nejdříve. Nejpozději však do 48 hodin po konci zápasu."
+    "MATCH_RESULT_WRITE": "Výsledky se snažíme zapsat co nejdříve. Nejpozději však do 48 hodin po konci zápasu.",
+    "MATCH_DEADLINE": "Zápasy se zobrazují v rozmezí 14 dnů do budoucna a 14 dnů do minulosti."
   }
 }
