loading vote state in match

--- a/tipovacka-app/src/assets/i18n/cs.json
+++ b/tipovacka-app/src/assets/i18n/cs.json
@@ -120,5 +120,6 @@
     },
     "SIGN_OUT": "Odhlásit se"
   },
-  "SIGN_IN": "Přihlásit se"
+  "SIGN_IN": "Přihlásit se",
+  "VOTE_LOADING": "Tvůj tip se načítá..."
 }
