--- a/tipovacka-app/src/assets/i18n/en.json
+++ b/tipovacka-app/src/assets/i18n/en.json
@@ -120,5 +120,6 @@
     },
     "SIGN_OUT": "Sign out"
   },
-  "SIGN_IN": "Sign in"
+  "SIGN_IN": "Sign in",
+  "VOTE_LOADING": "Your vote is loading..."
 }
