--- a/tipovacka-app/src/assets/i18n/cs.json
+++ b/tipovacka-app/src/assets/i18n/cs.json
@@ -37,7 +37,9 @@
     "Regular Season - 35": "35. kolo",
     "Regular Season - 36": "36. kolo",
     "Regular Season - 37": "37. kolo",
-    "Regular Season - 38": "38. kolo"
+    "Regular Season - 38": "38. kolo",
+    "Round of 16": "Osmifinále",
+    "Knockout Round Play-offs": "Vyřazovací fáze"
   },
   "STAGE": {
     "MAIN_STAGE": "Základní část",
