--- a/tipovacka-app/src/assets/i18n/en.json
+++ b/tipovacka-app/src/assets/i18n/en.json
@@ -37,7 +37,9 @@
     "Regular Season - 35": "Round 35",
     "Regular Season - 36": "Round 36",
     "Regular Season - 37": "Round 37",
-    "Regular Season - 38": "Round 38"
+    "Regular Season - 38": "Round 38",
+    "Round of 16": "Round of 16",
+    "Knockout Round Play-offs": "Play-off"
   },
   "STAGE": {
     "MAIN_STAGE": "Main stage",
