--- a/tipovacka-app/src/assets/i18n/cs.json
+++ b/tipovacka-app/src/assets/i18n/cs.json
@@ -53,8 +53,8 @@
     "FILTER": "Soutěže"
   },
   "TO_SAVE_NEED_TO_LOGIN": "Pro uložení tipů, je třeba se přihlásit.",
-  "NO_SCHEDULE_MATCHES": "Žádné zápasy v následujících 14 dnech.",
-  "NO_MATCH_RESULTS": "Žádné zápasy v předchozích 14 dnech.",
+  "NO_SCHEDULE_MATCHES": "Žádné zápasy v následujících 7 dnech.",
+  "NO_MATCH_RESULTS": "Žádné zápasy v předchozích 7 dnech.",
   "WAITING_TO_SET_RESULT": "Čeká se na zapsání výsledku.",
   "STANDINGS": {
     "EMPTY": "Zatím nebyl vyhodnocen žádný tip.",
@@ -75,14 +75,8 @@
     "CHOSEN_LEAGUES": "Vybrané ligy"
   },
   "USER_LEAGUES_OVERVIEW_BUTTON": "Ligy přátel ({{count}})",
-  "USER_LEAGUES_OVERVIEW": {
-    "TITLE": "Přehled lig přátel",
-    "SHOW_ALL": "Zrušit výběr ligy přátel",
-    "SELECT": "Vybrat",
-    "DELETE": "Smazat",
-    "INVITE": "Pozvat",
-    "LEAVE": "Opustit",
-    "USERS": "Přátelé"
+  "LEAGUES_OVERVIEW": {
+    "TITLE": "Soutěže"
   },
   "REQUIRED": "Povinný údaj",
   "AT_LEAST_ONE": "Alespoň jedna z možností musí být vybrána.",
@@ -113,11 +107,11 @@
   "INFO": {
     "TITLE": "Informace a pravidla",
     "MATCH_TIP_DEADLINE": "Tip na konečný výsledek lze zadat kdykoliv před oficiálním startem zápasu.",
-    "MATCH_RESULT_WRITE": "Výsledky se snažíme zapsat co nejdříve. Nejpozději však do 48 hodin po konci zápasu.",
-    "MATCH_DEADLINE": "Zápasy se zobrazují v rozmezí 14 dnů do budoucna a 14 dnů do minulosti."
+    "MATCH_RESULT_WRITE": "Výsledky pro hrací den se vyhodnocují ve 4:00 hod. následující den.",
+    "MATCH_DEADLINE": "Zápasy se zobrazují v rozmezí 7 dnů do budoucna a 7 dnů do minulosti."
   },
   "SETTINGS": {
-    "TITLE": "Nastavení",
+    "TITLE": "Uživatelské nastavení",
     "LANG": {
       "cs": "Česky",
       "en": "English"
@@ -125,5 +119,11 @@
     "SIGN_OUT": "Odhlásit se"
   },
   "SIGN_IN": "Přihlásit se",
-  "VOTE_LOADING": "Tvůj tip se načítá..."
+  "VOTE_LOADING": "Tvůj tip se načítá...",
+  "FILTER": {
+    "TITLE": "Filtrování",
+    "LEAGUES": "Soutěže",
+    "SEASONS": "Sezóny",
+    "SEASONS_DESCRIPTION": "Filtr sezón se aplikuje pouze na pořadí."
+  }
 }
