remove truncate from team name

--- a/tipovacka-app/src/assets/i18n/cs.json
+++ b/tipovacka-app/src/assets/i18n/cs.json
@@ -40,7 +40,25 @@
     "Regular Season - 38": "38. kolo",
     "Round of 16": "Osmifinále",
     "Quarter-finals": "Čtvrtfinále",
-    "Knockout Round Play-offs": "Vyřazovací fáze"
+    "Semi-finals": "Semifinále",
+    "Knockout Round Play-offs": "Vyřazovací fáze",
+    "Final": "Finále",
+    "Relegation Round": "Baráž o udržení",
+    "Championship Round - 1": "Skupina o titul - 1. kolo",
+    "Championship Round - 2": "Skupina o titul - 2. kolo",
+    "Championship Round - 3": "Skupina o titul - 3. kolo",
+    "Championship Round - 4": "Skupina o titul - 4. kolo",
+    "Championship Round - 5": "Skupina o titul - 5. kolo",
+    "Middle Play-offs - Final": "Play off o Konferenční ligu - Finále",
+    "Middle Play-offs - Semi-finals": "Play off o Konferenční ligu - Semifinále",
+    "Relegation Round - 1": "Skupina o udržení - 1. kolo",
+    "Relegation Round - 2": "Skupina o udržení - 2. kolo",
+    "Relegation Round - 3": "Skupina o udržení - 3. kolo",
+    "Relegation Round - 4": "Skupina o udržení - 4. kolo",
+    "Relegation Round - 5": "Skupina o udržení - 5. kolo",
+    "Group Stage - 1": "Skupinová fáze - 1. kolo",
+    "Group Stage - 2": "Skupinová fáze - 2. kolo",
+    "Group Stage - 3": "Skupinová fáze - 3. kolo"
   },
   "STAGE": {
     "MAIN_STAGE": "Základní část",
