--- a/tipovacka-app/src/assets/i18n/en.json
+++ b/tipovacka-app/src/assets/i18n/en.json
@@ -40,7 +40,25 @@
     "Regular Season - 38": "Round 38",
     "Round of 16": "Round of 16",
     "Quarter-finals": "Quarter final",
-    "Knockout Round Play-offs": "Play-off"
+    "Semi-finals": "Semi final",
+    "Knockout Round Play-offs": "Play-off",
+    "Final": "Final",
+    "Relegation Round": "Relegation",
+    "Championship Round - 1": "Championship group - Round 1",
+    "Championship Round - 2": "Championship group - Round 2",
+    "Championship Round - 3": "Championship group - Round 3",
+    "Championship Round - 4": "Championship group - Round 4",
+    "Championship Round - 5": "Championship group - Round 5",
+    "Middle Play-offs - Final": "Conference league play off - Final",
+    "Middle Play-offs - Semi-finals": "Conference league play off - Semi final",
+    "Relegation Round - 1": "Relegation group - Round 1",
+    "Relegation Round - 2": "Relegation group - Round 2",
+    "Relegation Round - 3": "Relegation group - Round 3",
+    "Relegation Round - 4": "Relegation group - Round 4",
+    "Relegation Round - 5": "Relegation group - Round 5",
+    "Group Stage - 1": "Group stage - Round 1",
+    "Group Stage - 2": "Group stage - Round 2",
+    "Group Stage - 3": "Group stage - Round 3"
   },
   "STAGE": {
     "MAIN_STAGE": "Main stage",
