--- a/tipovacka-app/src/assets/i18n/en.json
+++ b/tipovacka-app/src/assets/i18n/en.json
@@ -75,7 +75,8 @@
   "SIGN_IN": "Sign in",
   "VOTE_LOADING": "Your vote is loading...",
   "TOTAL": "Total",
-  "AFTER_FULLTIME": "After fulltime",
-  "AFTER_EXTRATIME": "After extratime",
-  "AFTER_PENALTY": "After penalty"
+  "AFTER_FULLTIME": "90'",
+  "AFTER_EXTRATIME": "120'",
+  "AFTER_PENALTY": "After penalty",
+  "Czech Liga": "Chance liga"
 }
